# CaissaAnalytics

./: .env.example  IMPLEMENTATION_SUMMARY.md  README.md  caissa_analytics.db  example_usage.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  main.py
app/api/: routes.py  schemas.py
app/database/: __init__.py  db.py
app/models/: models.py
app/services/: analysis_service.py  openai_analyzer.py  stockfish_analyzer.py
tests/: test_api.py
