[project]
name = "caissa-analytics"
version = "0.1.0"
description = "Chess game analysis service using Stockfish and OpenAI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "python-chess>=1.999",
    "stockfish>=3.28.0",
    "openai>=1.57.2",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
